Изменены ручки /clients/my-profile и /clients/orders, добавлена ручка /clients/update
